# zklaim

./: .env.example  .gitattributes  .gitignore  README.md  bb_prove_help.txt  package-lock.json  package.json  passport-status.md  vercel.json
app/: index.html  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
circuits/: Nargo.toml
contracts/: Cargo.toml
contracts/asp_membership/: Cargo.toml
contracts/asp_membership/src/: lib.rs  test.rs  tree.rs
contracts/asp_nonmembership/: Cargo.toml
contracts/asp_nonmembership/src/: lib.rs  sparse_merkle.rs  test.rs
contracts/claim_escrow/: Cargo.toml
contracts/claim_escrow/src/: escrow.rs  lib.rs  nullifier.rs  test.rs  types.rs
contracts/common/: Cargo.toml
contracts/common/src/: circuit_ids.rs  field_bytes.rs  lib.rs  merkle.rs  poseidon2.rs  types.rs
contracts/deductible_tracker/: Cargo.toml
contracts/deductible_tracker/src/: lib.rs  test.rs
contracts/passport_registry/: Cargo.toml
contracts/passport_registry/src/: lib.rs  test.rs  tree.rs
contracts/policy_registry/: Cargo.toml
contracts/policy_registry/src/: lib.rs
contracts/test_fixtures/: manifest.json
contracts/ultrahonk_verifier/: Cargo.toml
contracts/ultrahonk_verifier/src/: lib.rs  test.rs
docs/: idea.md  implementation.md  requirements.md
freighterfix/: fix.md
scripts/: bb_debug.sh  bb_help.sh  build_all.ts  build_asp_tree.ts  build_circuits.sh  build_contracts.sh  build_fraud_tree.ts  build_policy_tree.ts  debug_asp_alignment.ts  debug_execute.sh  demo_flow.sh  deploy.sh  deploy_continue.sh  diagnose_soroban_footprint.ts  export_proof_fixtures.ts  export_vks.sh  finish_redeploy_from_asp.sh  fund_usdc.sh  generate_circuit_vectors.ts  generate_insurer_view_keys.mjs  generate_poseidon_vectors.ts  (+29 more)
(+231 files in other folders)
