[package]
name = "ultrahonk_verifier"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }
zklaim-common = { workspace = true }
ultrahonk_soroban_verifier = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
zklaim-common = { workspace = true }

[features]
testutils = ["soroban-sdk/testutils"]
